--- a/options.conf
+++ b/options.conf
@@ -2,7 +2,7 @@
 name = libtool
 url = https://mirrors.kernel.org/gnu/libtool/libtool-2.4.6.tar.xz
 archives = 
-giturl = 
+giturl = https://git.savannah.gnu.org/git/libtool.git
 domain = 
 alias = 
 
