libtool: Autospec creation for update from version 2.4.6 to version 2.4.7
Alex Ameen (11):
      libtool: replace some references to /usr/bin/file and /bin/sh
      * libtool: Bump M4 serial versions and add missing AC_PROG_SED to ltdl.m4
      tests: remove deprecated old-ltdl-iface.at test.
      docs: manually recording dependencies in Automake
      maint: update copyrights across project.
      gnulib: update submodule to new repository.
      libtool: correct linter syntax complaints in M4
      libltdl: bump libltdl.la version-info.
      NEWS: fill entries for past commits
      NEWS: roll-back manually filled NEWS versioning
      version 2.4.7

Alex Potapenko (1):
      libtool: Pass -Xassembler flag and arguments to compiler

Alexander Shevchenko (1):
      libtool: add icl.exe support

Bert Wesarg (1):
      libtool: exit verbosely for fatal configure problems

David Edelsohn (1):
      m4/libtool.m4: export AIX TLS symbols

Gary V. Vaughan (2):
      maint: post-release administrivia
      maint: demote myself from maintainer to former maintainer.

Jeremy Huddleston Sequoia (2):
      libtool: fix GCC/clang linking with -fsanitize=*
      libtool: support macOS 11

KO Myung-Hun (1):
      libtool: set file_list_spec to '@' on OS/2

Lucas Holt (1):
      libtool: add support for MidnightBSD

Mike Frysinger (2):
      libtoolize: exec automake and autoconf only with --help
      libtool: pass through -fuse-ld flags

Pavel Raiskup (36):
      libtool: fix GCC linking with -specs=*
      bootstrap: fix race in temporary Makefile
      libtoolize: fix infinite recursion in m4
      gnulib: sync with upstream
      maint: put newline after 'Subjecŧ' in ChangeLog
      libool.m4: add ARFLAGS variable
      ARFLAGS: use 'cr' instead of 'cru' by default
      maint: relax 'sc_prohibit_test_dollar' check
      gnulib: sync with upstream
      libtool: mitigate the $sed_quote_subst slowdown
      libtool: optimizing options-parser hooks
      funclib: refactor quo

--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = libtool
-url = https://mirrors.kernel.org/gnu/libtool/libtool-2.4.6.tar.xz
+url = https://mirrors.kernel.org/gnu/libtool/libtool-2.4.7.tar.xz
 archives = 
 giturl = https://git.savannah.gnu.org/git/libtool.git
 domain = 
@@ -50,7 +50,7 @@ security_sensitive = false
 # package is only used by servers
 server = false
 # do not run test suite
-skip_tests = true
+skip_tests = false
 # add .so files to the lib package instead of dev
 so_to_lib = false
 # configure build for avx2
